--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,5 @@ include_directories(
 )
 
 add_executable(pointcloud2_cluster_tracking src/tracking.cpp src/hungarian.cpp)
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(pointcloud2_cluster_tracking ${catkin_LIBRARIES} ${PCL_LIBRARIES})
